--- a/app.wxss
+++ b/app.wxss
@@ -1,9 +1,10 @@
 /**app.wxss**/
 .container {
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
+  width: 100%;
+  height: 100%;
 } 
