--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -4,6 +4,11 @@ page{
 .search{
   width: 90%;
 }
+.tab{
+   display: flex;
+   justify-content: center;
+   align-items: center
+}
 .bj {
   width: 100%;
   height: 100%;
@@ -28,7 +33,7 @@ page{
   width:100%;
   /* background-color: rgba(39, 173, 235, 0); */
   background-color: #fff;
-  overflow-y: scroll;
+  overflow-y: hidden;
   white-space: nowrap; 
   justify-content: center;
   align-items: center;
@@ -44,15 +49,18 @@ page{
 }
 .select {
   background-color: #ffffff;
-  border-bottom: 2px solid #36AE66;
+  border-bottom: 2px solid rgb(106, 121, 172);
   border-right: 2px solid #f2f2f2;
   font-weight: bold;
   display: flex;
   text-align: center;
   justify-content: center;
-  color: #36AE66;
+  color: rgb(106, 121, 172);
 }
 .normal {
+  display: flex;
+  text-align: center;
+  justify-content: center;
   background-color: rgba(39, 173, 235, 0);
   border-right: 2px solid #f2f2f2;
 }
@@ -93,9 +101,6 @@ page{
 .ct{
   background-color: #eee;
 }
-/* .obj{
-  background-color: #fff;
-} */
 .content2{
   background-color: #fff;
   padding: 25rpx 50rpx 50rpx 50rpx;
