--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,27 +5,24 @@
 <view class="content">
       <scroll-view class='left' scroll-x="true" style="width:{{scrollwidth}}px">
         <view class="{{flag==0?'select':'normal'}}" id='0' bindtap='switchNav'>音程</view>
-        <view class="{{flag==1?'select':'normal'}}" id='1' bindtap='switchNav'>音阶</view>
+        <view class="{{flag==1?'select':'normal'}}" id='1' bindtap='switchNav'>调式</view>
         <view class="{{flag==2?'select':'normal'}}" id='2' bindtap='switchNav'>和弦</view>
         <view class="{{flag==3?'select':'normal'}}" id='3' bindtap='switchNav'>旋律</view>
         <view class="{{flag==4?'select':'normal'}}" id='4' bindtap='switchNav'>节奏</view>
       </scroll-view>
       <view class='right'>
         <view class='category'>
-          <swiper current='{{currentTab}}' style="height:{{scrollheight}}px">
-            <swiper-item class="obj" catchtouchmove="stopTouchMove" wx:for="{{content}}" wx:for-index="i" id='{{i}}' wx:key="id">
+          <swiper current='{{currentTab}}' style="height:{{scrollheight}}px" bindchange="change">
+            <swiper-item class="obj"  wx:for="{{content}}" wx:for-index="i" id='{{i}}' wx:key="id">
             <scroll-view scroll-y="true" class='right' style="height:{{scrollheight-135*scrollwidth/750}}px">
             <view class="content2" style="opacity:{{10}}" wx:for="{{item}}" wx:for-index="j" wx:key="j">
               <view class="line">
               <view class='text'>
               {{item.text}}
               </view>
-              <button wx:if="{{!item.ifShoucang}}"class="btn"  bindtap="btnShoucang{{i}}{{j}}" style="background-image:url(https://6a77-jwx-q7azx-1301736219.tcb.qcloud.la/shoucang1.png?sign=a7683350961acda06ddc9457a712b869&t=1585726652)">
-</button>
-<button wx:else class="btn"  bindtap="btnShoucang{{i}}{{j}}" style="background-image:url(https://6a77-jwx-q7azx-1301736219.tcb.qcloud.la/shoucang2.png?sign=222cf223823037bf0fd2abef3b990c57&t=1585726680)"></button>
               </view>
-              <image src="{{item.music.ifplay?'/images/pause.png':'/images/start.png'}}" class='music' catchtap='playMusic{{i}}{{j}}' data-pidi="{{i}}" data-pidj="{{j}}"></image><text>循环播放</text>
-              <switch checked="{{item.music.innerAudioContext.loop}}" bindchange="switch{{i}}{{j}}Change"/>
+              <image src="{{item.music.ifplay?'/images/pause.png':'/images/start.png'}}" class='music' catchtap='playMusic{{i}}{{j}}' data-pidi="{{i}}" data-pidj="{{j}}"></image>
+              <text>{{item.intro}}</text>
               </view>
               </scroll-view> 
             </swiper-item>
@@ -34,3 +31,4 @@
         </view>
   </view>
   </view>
+  <!-- catchtouchmove="stopTouchMove" -->
