--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -1,1 +1,16 @@
 /* pages/show/show.wxss */
+.bg{
+  background-color: #98b4d8;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  position: relative;
+}
+.swpitem{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+}
