--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,6 +1,9 @@
 <view class = "container bg" style="height:{{scrollheight}}px;width:{{scrollwidth}}px">
 <text style="">detail id: {{id}}</text>
-<input class="ansstr" type="text" disabled='true' placeholder="{{ansstr}}" placeholder-style="color:#000"/>
+<!-- <input class="ansstr" type="text" disabled='true' placeholder="{{ansstr}}" placeholder-style="color:#000"/> -->
+<view wx:for="{{testmusic}}">
+    <input wx:if="{{index==currentIndex}}" class="ansstr" type="text" disabled='true' placeholder="{{item.myans}}" placeholder-style="color:#000"/>
+</view>
 <view class="line std" wx:if="{{id!=4}}">
   <image src="{{ifplaystd?'/images/pause.png':'/images/start.png'}}" class='music' catchtap='playMusicStd'></image>
   <text class="stdtag">标准音</text>
@@ -21,7 +24,6 @@
 <view class="line ansshow"></view>
 
 <view class="lower">
-<button wx:if="{{finished==5}}" class="btncommon" catchtap="submit">提交</button>
 <view wx:if="{{id==0}}" id="0">
 <view class="line">
   <button wx:for="{{btn0}}"  wx:key="id" wx:if="{{index<7}}" class="btn0" catchtap="ans" data-id="{{item}}">
@@ -95,7 +97,8 @@
 <view class="line" catchtap="anscommon" wx:if="{{id!=4}}">
   <button class="btncommon" id="delete" bindtap="ansdelete"><text>删除</text></button>
   <button class="btncommon" id="cancel" bindtap="anscancel"><text>取消</text></button>
-  <button class="btncommon" id="confirm" bindtap="ansconfirm"><text>确定</text></button>
+  <button wx:if="{{currentIndex!=4}}" class="btncommon" id="confirm" bindtap="ansconfirm"><text>确定</text></button>
+  <button wx:if="{{currentIndex==4}}" class="btncommon" catchtap="submit">提交</button>
 </view>
 <view class="line">
   
