--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -3,8 +3,9 @@
   <swiper current='{{currentIndex}}' style="height:{{scrollheight}}px;width:{{scrollwidth}}px" bindchange="change" vertical="true">
     <swiper-item class="swpitem"  >
       <text class="first">你答对了{{5-wrongnum}}/5题</text>
+      <text class="first">下拉查看详情</text>
     </swiper-item>
-    <swiper-item class="swpitem" wx:for="{{testmusic}}" wx:if="{{index<wrongnum}}" wx:key="index">
+    <swiper-item class="swpitem" wx:for="{{testmusic}}" wx:if="{{index<wrongnum}}">
       <text>{{index+1}}</text>
       <image src="{{item.ifplay?'/images/pause.png':'/images/start.png'}}" class='music' catchtap='playMusic'></image>
       <text>正确答案：{{item.answer}}</text>
