--- a/pages/cuoti/cuoti.wxml
+++ b/pages/cuoti/cuoti.wxml
@@ -1,5 +1,6 @@
 <view class="container bg" style="height:{{scrollheight}}px;width:{{scrollwidth}}px">
 <scroll-view scroll-y="true" class='right' style="height:{{scrollheight}}px">
+  <text>为提高复习效率，只保留近20道错题</text>
 <view class="content2" style="opacity:{{10}}" wx:for="{{testmusic}}">
   <view class="line">
   <view class='text'>
